--- a/main/.env
+++ b/main/.env
@@ -12,15 +12,29 @@ ODOO_USERNAME='punzalanpatrickjason@gmail.com'
 ODOO_PASSWORD='TeMp4455$'
 ACCESS_TOKEN='d300062fc94756a28e4e52da92f716b6f6b4da31'
 
-#PROD DEV
-# CLIENT_ID='0oaytimtyvhNqD3Hs1t7'
-# CLIENT_SECRET='1w_TSJgC5YCtR7wK8uCeaz8BSiR5ysR3AIS6PYREY1e76h4u_uWyNSvQNeGRbsXG'
-# TOKEN_URL='https://sso.johndeere.com/oauth2/aus9k0fb8kUjG8S5Z1t7/v1/token'
-# GRANT_TYPE='client_credentials'
 
 #PROD ENV
-# ODOO_URL='https://abomar.odoo.com'
-# ODOO_DB='abomar-crm'
-# ODOO_USERNAME='punzalanpatrickjason@gmail.com'
-# ODOO_PASSWORD='TeMp4455$'
-# ACCESS_TOKEN='bcb9553e27ff2f9dfcaa8b0a4c801d8d728f6867'
+# DB Connection
+PROD_ODOO_URL='https://abomar-18.odoo.com/'
+PROD_ODOO_DB='abomar-18'
+PROD_ODOO_USERNAME='punzalanpatrickjason@gmail.com'
+PROD_ODOO_PASSWORD='TeMp4455$'
+PROD_ACCESS_TOKEN='f2a5ffa74d7f43db1d171693b474a43139c88ecc'
+
+# PRODUCTION UPLOAD API URL
+PROD_JD_UPLOAD_API_URL='https://dtfapi.deere.com/dbs/dealer/7A1758/files'
+PROD_JD_DOWNLOAD_API_URL='https://dtfapi.deere.com/dbs/dealer/7A1758/files/'
+
+# UPLOAD AND DOWNLOAD TOKENS PRE-REQUISITES
+PROD_CLIENT_ID='0oaytimtyvhNqD3Hs1t7'
+PROD_CLIENT_SECRET='1w_TSJgC5YCtR7wK8uCeaz8BSiR5ysR3AIS6PYREY1e76h4u_uWyNSvQNeGRbsXG'
+PROD_TOKEN_URL='https://sso.johndeere.com/oauth2/aus9k0fb8kUjG8S5Z1t7/v1/token'
+PROD_GRANT_TYPE='client_credentials'
+
+# EMAIL CREDENTIALS
+PROD_EMAIL_USERNAME='abomar.dtf.api@gmail.com'
+PROD_EMAIL_PASSWORD='xcjw tphv uzjt ctwh'
+
+# MONEY CONVERSION API KEY
+API_KEY_ENV_VAR = '0430be87475ea7529bbc7ff13ba14324'
+API_URL_ENV_VAR = 'https://api.exchangerate.host/convert'
